Thu Jan  7 14:49:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_pending_interrupt_p): no pending interrupt
	  before initialization.

	* thread.c (thread_raise_m, rb_thread_kill): uninitialized thread
	  cannot interrupt.  [ruby-core:72732] [Bug #11959]

Thu Jan  7 11:34:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward.h (ruby_show_copyright_to_die): for source
	  code backward compatibility.

	* ruby.c (process_options): return Qtrue to exit the process
	  successfully.

	* version.c (ruby_show_copyright): no longer exit.

Wed Jan  6 17:22:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#order!): add `into` optional
	  keyword argument to store the results.  [Feature #11191]

Tue Jan  5 21:44:37 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fix wrong class name.

Tue Jan  5 21:43:50 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb(test_chr): added test for String#chr
	  [fix GH-1179]

Tue Jan  5 21:32:26 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_numeric.rb (test_nonzero_p): added test for Numeric#nonzero?
	  [fix GH-1187]

Tue Jan  5 11:47:23 2016  Damir Gaynetdinov  <damir.gaynetdinov@gmail.com>

	* doc/marshal.rdoc: Clarify object references example, that the
	  reference is same object.  [Fix GH-1156]

Tue Jan  5 05:06:51 2016  Eric Wong  <e@80x24.org>

	* ext/stringio/stringio.c (strio_binmode): implement to set encoding
	* test/stringio/test_stringio.rb (test_binmode): new test
	  [ruby-core:72699] [Bug #11945]

Mon Jan  4 15:44:37 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* variable.c (rb_mod_deprecate_constant): [DOC] added
	  documentation for Module#deprecate_constant. [ci skip]

Mon Jan  4 15:36:38 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* thread_sync.c: [DOC] remove SizedQueue#close argument.
	  [ci skip]

Mon Jan  4 12:07:00 2016  Naohisa Goto  <ngotogenome@gmail.com>
